load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "vips",
    srcs = [
        "arithmetic.c",
        "arithmetic.go",
        "arithmetic.h",
        "color.c",
        "color.go",
        "color.h",
        "composite.go",
        "conversion.c",
        "conversion.go",
        "conversion.h",
        "convolution.c",
        "convolution.go",
        "convolution.h",
        "create.c",
        "create.go",
        "create.h",
        "draw.c",
        "draw.go",
        "draw.h",
        "error.go",
        "foreign.c",
        "foreign.go",
        "foreign.h",
        "govips.c",
        "govips.go",
        "govips.h",
        "header.c",
        "header.go",
        "header.h",
        "icc_profiles.go",
        "image.c",
        "image.go",
        "image.h",
        "label.c",
        "label.go",
        "label.h",
        "lang.go",
        "lang.h",
        "logging.go",
        "math.go",
        "morphology.c",
        "morphology.go",
        "morphology.h",
        "resample.c",
        "resample.go",
        "resample.h",
        "stats.go",
        "test_resources.go",
    ],
    cgo = True,
    importpath = "github.com/davidbyttow/govips/v2/vips",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_x_image//bmp",
        "@org_golang_x_net//html/charset",
    ],
)

go_test(
    name = "vips_test",
    srcs = [
        "foreign_test.go",
        "govips_test.go",
        "icc_profiles_test.go",
        "image_gif_test.go",
        "image_golden_test.go",
        "image_test.go",
        "image_thumbnail_test.go",
        "logging_test.go",
    ],
    embed = [":vips"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_x_image//bmp",
    ],
)
